--- a/src/App.css
+++ b/src/App.css
@@ -1,45 +1,3 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
 
 .user {
   position: relative;
@@ -58,4 +16,28 @@
 img {
   max-width: 500px;
   max-height: 500px;
+}
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+.navbar {
+  display: flex;
+  gap: 10px;
+}
+.navlink,
+.navlink>a {
+  color: cornsilk;
+  background-color: darkslateblue;
+  border: none;
+  text-decoration: none;
+}
+.navlink:hover,
+.navlink:hover>a  {
+  background-color: slateblue;
+}
+.navlink:active,
+.navlink:active>a {
+  background-color: darkslategray;
 }
