--- a/src/index.css
+++ b/src/index.css
@@ -8,21 +8,18 @@
 }
 :root {
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: #FFFFFF;
+  background-color: #000000;
   font-family: 'lexend_decaregular';
 }
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
+    color:  #000000;
+    background-color: #FFFFFF;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #E5E5E5;
   }
 }
 
